--- a/templates/admin/new_post.html
+++ b/templates/admin/new_post.html
@@ -44,6 +44,22 @@
             style="font-family: 'Inter'"
             required
           />
+          <input
+            type="text"
+            name="description"
+            placeholder="Description"
+            class="w-250 px-4 py-2 mb-5 rounded-lg border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring-1 focus:ring-blue-500"
+            style="font-family: 'Inter'"
+            required
+          />
+          <input
+            type="text"
+            name="tags"
+            class="w-250 px-4 py-2 mb-5 rounded-lg border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring-1 focus:ring-blue-500"
+            style="font-family: 'Inter'"
+            id="tag-input"
+            placeholder="Add tags..."
+          />
           <textarea class="mb-5 w-full" name="content" required>
             Post Body
           </textarea>
