--- a/templates/blog/articles.html
+++ b/templates/blog/articles.html
@@ -10,11 +10,97 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Manrope&family=Montserrat&display=swap"
       rel="stylesheet"
     />
+
     <title>Articles</title>
+
+    <style>
+      body {
+        background: linear-gradient(
+          to right,
+          #1c2b3a,
+          #2c3e50,
+          #34495e,
+          #2c3e50,
+          #1c2b3a
+        );
+        color: #fff;
+      }
+    </style>
   </head>
-  <body class="bg-lightblue-950" style="font-family: 'Inter'">
-    <div class="flex justify-center items-center h-screen text-white">
-      {{range Articles}} {{.Title}} {{.Content}} {{end}}
+  <body class="bg-lightblue-950" style="font-family: 'Manrope'">
+    <nav class="bg-gray-800 px-4 py-3 flex justify-between items-center">
+      <div class="text-white font-bold text-xl">
+        <a class="text-gray-300" href="/">FC Blog</a>
+      </div>
+      <ul class="hidden md:flex space-x-4 list-none">
+        <li>
+          <a href="https://frrt.space" class="text-gray-300 hover:text-white"
+            >Main Site</a
+          >
+        </li>
+      </ul>
+      <div class="md:hidden">
+        <button class="text-gray-300 hover:text-white focus:outline-none">
+          <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+            <!-- Hamburger icon -->
+          </svg>
+        </button>
+      </div>
+    </nav>
+
+    <div class="flex items-center text-black mt-10 ml-10">
+      <div class="grid sm-grid-cols-2 lg-grid-cols-3 gap6 md-gap8 lg-gap10">
+        {{range .Articles}}
+        <div
+          class="relative max-height-sm p-5 sm:p-6 md:p-8 rd-lg bg-gray1 dark-bg-gray9 border border-gray2 dark-border-gray8 space-y-6"
+        >
+          <div class="card">
+            <div class="flex justify-between items-center">
+              <h1 class="font-size-9">{{.Title}}</h1>
+              <img
+                src="{{.Image}}"
+                class="rd-lg w-20 h-20 absolute top-0 right-0 mr-5 mt-5"
+              />
+            </div>
+            <h1 class="font-size-3 mb-5 text-wrap">{{.Description}}</h1>
+            <div class="grid gap-2 grid-cols-3">
+              {{range .Tags}}
+              <div
+                class="h5 px2 rd-md text-center bg-gray-300 items-center text-black inline"
+              >
+                {{.}}
+              </div>
+              {{end}}
+            </div>
+            <div
+              class="text-center text-truncate text-wrap px-2 line-clamp-5 border-rounded-lg border-solid border border-black border-1 my-5"
+            >
+              {{.Content}}
+            </div>
+            <a
+              href="/blog/{{.Id}}"
+              class="group absolute bottom-0 mb-3 gap-x-3 text-gray8 dark-text-gray2 font-medium border-b border-gray-3 dark:border-gray7"
+            >
+              Read Article
+              <span class="duration-300 ease-linear group-hover:pl-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                  class="w5 h5"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </span>
+            </a>
+          </div>
+        </div>
+        {{end}}
+      </div>
     </div>
   </body>
 </html>
