do a bit more styling

--- a/templates/auth/sign_in.html
+++ b/templates/auth/sign_in.html
@@ -12,7 +12,20 @@
     />
     <title>Sign In</title>
   </head>
-  <body class="bg-lightblue-950" style="font-family: 'Inter'">
+  <body
+    class="bg-lightblue-950"
+    style="
+      font-family: 'Manrope';
+      background-color: #313136;
+      background-image: url('/static/polygon-scatter-haikei.svg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 50% 0%;
+      font-family: 'Montserrat', sans-serif;
+      font-stretch: extra-expanded;
+    "
+  >
     <div class="flex justify-center items-center h-screen text-white">
       <div class="text-center">
         <form id="account-form" method="get" action="/auth/login">
