--- a/templates/admin/new_post.html
+++ b/templates/admin/new_post.html
@@ -17,7 +17,20 @@
 
     <title>New Post</title>
   </head>
-  <body class="bg-lightblue-950" style="font-family: 'Inter'">
+  <body
+    class="bg-lightblue-950"
+    style="
+      font-family: 'Manrope';
+      background-color: #313136;
+      background-image: url('/static/polygon-scatter-haikei.svg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 50% 0%;
+      font-family: 'Montserrat', sans-serif;
+      font-stretch: extra-expanded;
+    "
+  >
     <script>
       tinymce.init({
         selector: "textarea",
