--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -27,7 +27,20 @@
       }
     </style>
   </head>
-  <body class="bg-lightblue-950" style="font-family: 'Manrope'">
+  <body
+    class="bg-lightblue-950"
+    style="
+      font-family: 'Manrope';
+      background-color: #313136;
+      background-image: url('/static/polygon-scatter-haikei.svg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 50% 0%;
+      font-family: 'Montserrat', sans-serif;
+      font-stretch: extra-expanded;
+    "
+  >
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const links = document.querySelectorAll("a");
@@ -73,10 +86,14 @@
           {{end}}
         </div>
 
-        <div
-          class="text-center border-rounded-lg border-solid border border-black border-1 my-5"
-        >
-          {{.Article.Content}}
+        <div class="card">
+          <div class="flex justify-between items-center">
+            <div
+              class="text-center bg-dark-600 border-rounded-lg border-solid border border-black border-1 my-5"
+            >
+              {{.Article.Content}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
