--- a/templates/blog/articles.html
+++ b/templates/blog/articles.html
@@ -27,7 +27,20 @@
       }
     </style>
   </head>
-  <body class="bg-lightblue-950" style="font-family: 'Manrope'">
+  <body
+    class="bg-lightblue-950"
+    style="
+      font-family: 'Manrope';
+      background-color: #313136;
+      background-image: url('/static/polygon-scatter-haikei.svg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 50% 0%;
+      font-family: 'Montserrat', sans-serif;
+      font-stretch: extra-expanded;
+    "
+  >
     <nav class="bg-gray-800 px-4 py-3 flex justify-between items-center">
       <div class="text-white font-bold text-xl">
         <a class="text-gray-300" href="/">FC Blog</a>
